--- a/index.html
+++ b/index.html
@@ -9,89 +9,106 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: system-ui, sans-serif;
     background: #ece5dd;
+    font-family: system-ui, sans-serif;
   }
 
-  /* Screens */
-  #loginScreen, #chatListScreen, #chatScreen {
-    display: none;
-    height: 100vh;
-  }
-
-  .active {
+  main {
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
 
-  /* Login */
+  /* Reusable screen container */
+  .screen {
+    display: none;
+    flex-direction: column;
+    height: 100%;
+  }
+  .screen.active { display: flex; }
+
+  /*********************
+   * AUTH SCREEN
+   *********************/
   #loginScreen {
-    align-items: center;
     justify-content: center;
+    align-items: center;
     background: #075e54;
     color: white;
+    text-align: center;
+    padding: 20px;
   }
-
-  #loginScreen input, #loginScreen button {
+  #loginScreen input {
+    display: block;
+    width: 80%;
+    margin: 8px auto;
     padding: 10px;
-    margin: 8px 0;
     border-radius: 8px;
     border: none;
     font-size: 1rem;
   }
-
-  #loginScreen button {
-    background: #25d366;
-    color: white;
-    cursor: pointer;
-    width: 100%;
-  }
-
-  /* Chat list */
-  #chatListScreen {
-    background: #fff;
-  }
-
-  #chatListHeader {
-    background: #075e54;
-    color: white;
-    padding: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  #chatList {
-    flex: 1;
-    overflow-y: auto;
-    padding: 8px;
-  }
-
-  .chatItem {
-    padding: 12px;
-    border-bottom: 1px solid #eee;
-    cursor: pointer;
-  }
-
-  .chatItem:hover {
-    background: #f5f5f5;
-  }
-
-  #newChatBtn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+  #loginBtn {
     background: #25d366;
     color: white;
     border: none;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    font-size: 28px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+  }
+
+  /*********************
+   * CHAT LIST
+   *********************/
+  #chatListScreen {
+    background: #fff;
+    flex: 1;
+  }
+  #chatListHeader {
+    background: #075e54;
+    color: white;
+    padding: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 600;
+  }
+  #chatList {
+    flex: 1;
+    overflow-y: auto;
+    padding-bottom: 70px;
+  }
+  .chatItem {
+    padding: 14px;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+  }
+  .chatItem:hover { background: #f9f9f9; }
+
+  #bottomMenu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #075e54;
+    padding: 10px 0;
+  }
+  #bottomMenu button {
+    background: #25d366;
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-weight: 600;
     cursor: pointer;
   }
 
-  /* Chat screen */
+  /*********************
+   * CHAT SCREEN
+   *********************/
   #chatScreen {
     background: #ece5dd;
   }
@@ -99,11 +116,17 @@
   #chatHeader {
     background: #075e54;
     color: white;
-    padding: 14px;
-    font-weight: 600;
+    padding: 12px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+  }
+  #chatHeader button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
   }
 
   #messages {
@@ -112,132 +135,121 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    scroll-behavior: smooth;
   }
 
   .msg {
     max-width: 80%;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     padding: 8px 12px;
-    border-radius: 12px;
+    border-radius: 10px;
     position: relative;
     word-wrap: break-word;
   }
-
-  .me {
-    align-self: flex-end;
-    background: #dcf8c6;
-    border-bottom-right-radius: 2px;
-  }
-
-  .them {
-    align-self: flex-start;
-    background: #fff;
-    border-bottom-left-radius: 2px;
-  }
+  .me { align-self: flex-end; background: #dcf8c6; }
+  .them { align-self: flex-start; background: #fff; }
 
   .timestamp {
-    position: absolute;
-    bottom: 4px;
-    right: 8px;
-    font-size: 0.7rem;
+    font-size: 0.75rem;
     color: #666;
+    text-align: right;
+    margin-top: 2px;
   }
 
-  #replyBox {
-    background: #f0f0f0;
-    border-left: 3px solid #25d366;
-    margin: 0 8px;
-    padding: 6px;
-    font-size: 0.9rem;
+  #replyBar {
     display: none;
+    background: #f0f0f0;
+    padding: 6px 10px;
+    border-left: 4px solid #25d366;
+    font-size: 0.9rem;
   }
 
-  #chatInputBar {
-    background: #fff;
-    padding: 8px;
+  #inputBar {
     display: flex;
     align-items: center;
-    gap: 8px;
+    background: #fff;
+    padding: 8px;
     border-top: 1px solid #ccc;
   }
-
   #message {
     flex: 1;
     padding: 10px;
     border-radius: 20px;
     border: 1px solid #ccc;
     outline: none;
-    font-size: 1rem;
   }
-
   #sendBtn {
     background: #128c7e;
-    border: none;
     color: white;
+    border: none;
     border-radius: 50%;
     width: 42px;
     height: 42px;
-    font-weight: bold;
+    margin-left: 8px;
+    font-size: 1.2rem;
     cursor: pointer;
   }
 
+  /* Responsive tweaks */
+  @media (min-width: 700px) {
+    main { max-width: 600px; margin: auto; border-radius: 10px; overflow: hidden; }
+    #bottomMenu { position: static; border-top: 1px solid #ccc; }
+  }
 </style>
 </head>
+
 <body>
-  <!-- LOGIN SCREEN -->
-  <main id="loginScreen" class="active">
+<main>
+  <!-- LOGIN -->
+  <section id="loginScreen" class="screen active">
     <div>
-      <h1>Login</h1>
+      <h2>Chat Login</h2>
       <input id="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
-      <input id="username" placeholder="Username" />
+      <input id="username" placeholder="Username (for signup)" />
       <button id="loginBtn">Login / Register</button>
     </div>
-  </main>
+  </section>
 
   <!-- CHAT LIST -->
-  <main id="chatListScreen">
-    <div id="chatListHeader">
-      <span>Chats</span>
-      <div>
-        <button id="dmBtn">DM</button>
-        <button id="newGroupBtn">Group</button>
-      </div>
-    </div>
+  <section id="chatListScreen" class="screen">
+    <div id="chatListHeader">Your Chats</div>
     <div id="chatList"></div>
-    <button id="newChatBtn">＋</button>
-  </main>
+    <div id="bottomMenu">
+      <button id="dmBtn">DM</button>
+      <button id="groupBtn">Group</button>
+      <button id="logoutBtn">Logout</button>
+    </div>
+  </section>
 
-  <!-- CHAT SCREEN -->
-  <main id="chatScreen">
+  <!-- CHAT -->
+  <section id="chatScreen" class="screen">
     <div id="chatHeader">
-      <span id="chatName">Chat</span>
       <button id="backBtn">←</button>
+      <span id="chatName">Chat</span>
     </div>
     <div id="messages"></div>
-    <div id="replyBox"></div>
-    <div id="chatInputBar">
+    <div id="replyBar"></div>
+    <div id="inputBar">
       <input id="message" placeholder="Type a message..." />
       <button id="sendBtn">➤</button>
     </div>
-  </main>
+  </section>
+</main>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-  import { getDatabase, ref, set, push, onChildAdded, get, update } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+  import { getDatabase, ref, set, push, get, onChildAdded } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
-    authDomain: "messagingapp-7ede5.firebaseapp.com",
-    databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
-    projectId: "messagingapp-7ede5",
-    storageBucket: "messagingapp-7ede5.firebasestorage.app",
-    messagingSenderId: "221896974865",
-    appId: "1:221896974865:web:3faca4885e48ee656907b0"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
+  authDomain: "messagingapp-7ede5.firebaseapp.com",
+  databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
+  projectId: "messagingapp-7ede5",
+  storageBucket: "messagingapp-7ede5.firebasestorage.app",
+  messagingSenderId: "221896974865",
+  appId: "1:221896974865:web:3faca4885e48ee656907b0"
+};
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getDatabase(app);
@@ -247,46 +259,54 @@
   const chatScreen = document.getElementById("chatScreen");
   const chatList = document.getElementById("chatList");
   const messagesDiv = document.getElementById("messages");
+  const replyBar = document.getElementById("replyBar");
   const messageInput = document.getElementById("message");
-  const sendBtn = document.getElementById("sendBtn");
-  const replyBox = document.getElementById("replyBox");
+
   let currentUser = null, currentChatId = null, replyTo = null;
 
-  const show = s => { loginScreen.style.display = chatListScreen.style.display = chatScreen.style.display = "none"; s.style.display = "flex"; };
+  const show = (s) => {
+    [loginScreen, chatListScreen, chatScreen].forEach(e => e.classList.remove("active"));
+    s.classList.add("active");
+  };
 
-  // LOGIN / REGISTER
+  // Login or Register
   document.getElementById("loginBtn").onclick = async () => {
-    const email = emailInput.value = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-    const username = document.getElementById("username").value;
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+    const username = document.getElementById("username").value.trim();
+    if (!email || !password) return alert("Enter credentials.");
     try {
       const cred = await signInWithEmailAndPassword(auth, email, password);
       currentUser = cred.user;
     } catch {
       const cred = await createUserWithEmailAndPassword(auth, email, password);
       currentUser = cred.user;
-      await set(ref(db, "users/" + currentUser.uid), { username });
+      await set(ref(db, "users/" + currentUser.uid), { username, email });
     }
   };
 
+  // Auth listener
   onAuthStateChanged(auth, async user => {
     if (user) {
       currentUser = user;
-      show(chatListScreen);
       loadChats();
+      show(chatListScreen);
+    } else {
+      show(loginScreen);
     }
   });
 
+  // Load chats
   async function loadChats() {
     chatList.innerHTML = "";
-    const chatsSnap = await get(ref(db, "chats"));
-    if (chatsSnap.exists()) {
-      chatsSnap.forEach(c => {
+    const chats = await get(ref(db, "chats"));
+    if (chats.exists()) {
+      chats.forEach(c => {
         const chat = c.val();
         if (chat.members && chat.members.includes(currentUser.uid)) {
           const div = document.createElement("div");
           div.className = "chatItem";
-          div.textContent = chat.name || "Chat";
+          div.textContent = chat.name;
           div.onclick = () => openChat(c.key, chat.name);
           chatList.append(div);
         }
@@ -294,80 +314,90 @@
     }
   }
 
-  function openChat(id, name) {
+  async function openChat(id, name) {
     currentChatId = id;
     messagesDiv.innerHTML = "";
     document.getElementById("chatName").textContent = name;
     show(chatScreen);
-    const msgsRef = ref(db, "chats/" + id + "/messages");
-    onChildAdded(msgsRef, snap => {
-      const m = snap.val();
-      const div = document.createElement("div");
-      div.classList.add("msg", m.sender === currentUser.uid ? "me" : "them");
-      div.textContent = m.text;
-      const time = document.createElement("span");
-      time.className = "timestamp";
-      time.textContent = new Date(m.time).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-      div.appendChild(time);
-      div.addEventListener("touchstart", e => { div.startX = e.touches[0].clientX; });
-      div.addEventListener("touchmove", e => {
-        const diff = e.touches[0].clientX - div.startX;
-        if (diff > 50) replyToMessage(m);
-      });
-      messagesDiv.append(div);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight;
-      if (m.sender !== currentUser.uid) showNotification(name, m.text);
+    const msgRef = ref(db, "chats/" + id + "/messages");
+    onChildAdded(msgRef, s => renderMessage(s.val()));
+  }
+
+  function renderMessage(m) {
+    const div = document.createElement("div");
+    div.classList.add("msg", m.sender === currentUser.uid ? "me" : "them");
+    div.innerHTML = `
+      ${m.replyTo ? `<div style="font-size:0.85rem;color:#555;border-left:3px solid #25d366;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>` : ""}
+      ${m.text}
+      <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
+    messagesDiv.append(div);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+
+    div.addEventListener("touchstart", e => div.startX = e.touches[0].clientX);
+    div.addEventListener("touchmove", e => {
+      const diff = e.touches[0].clientX - div.startX;
+      if (diff > 70) showReplyBar(m.text);
     });
+    div.onclick = () => showReplyBar(m.text);
   }
 
-  function replyToMessage(m) {
-    replyTo = m;
-    replyBox.style.display = "block";
-    replyBox.textContent = "Replying to: " + m.text.slice(0, 40);
+  function showReplyBar(text) {
+    replyTo = text;
+    replyBar.style.display = "block";
+    replyBar.textContent = "Replying to: " + text.slice(0, 40);
   }
 
-  sendBtn.onclick = async () => {
-    if (!messageInput.value.trim()) return;
-    const msg = { sender: currentUser.uid, text: messageInput.value, time: Date.now(), replyTo: replyTo?.text || null };
-    await push(ref(db, "chats/" + currentChatId + "/messages"), msg);
+  document.getElementById("sendBtn").onclick = async () => {
+    const text = messageInput.value.trim();
+    if (!text || !currentChatId) return;
+    await push(ref(db, "chats/" + currentChatId + "/messages"), {
+      sender: currentUser.uid,
+      text,
+      replyTo,
+      time: Date.now()
+    });
     messageInput.value = "";
-    replyBox.style.display = "none";
+    replyBar.style.display = "none";
     replyTo = null;
   };
 
   document.getElementById("backBtn").onclick = () => {
-    show(chatListScreen);
     currentChatId = null;
+    show(chatListScreen);
   };
 
-  // NOTIFICATIONS
-  if ("Notification" in window && Notification.permission !== "granted") {
-    Notification.requestPermission();
-  }
+  document.getElementById("logoutBtn").onclick = async () => {
+    await signOut(auth);
+    currentUser = null;
+    show(loginScreen);
+  };
 
-  function showNotification(title, body) {
-    if (Notification.permission === "granted") new Notification(title, { body });
-  }
-
-  // New group / DM
-  document.getElementById("newGroupBtn").onclick = async () => {
+  document.getElementById("groupBtn").onclick = async () => {
     const name = prompt("Group name:");
     if (!name) return;
-    const chatRef = push(ref(db, "chats"));
-    await set(chatRef, { name, isGroup: true, members: [currentUser.uid] });
+    const refNew = push(ref(db, "chats"));
+    await set(refNew, { name, isGroup: true, members: [currentUser.uid] });
     loadChats();
   };
 
   document.getElementById("dmBtn").onclick = async () => {
-    const target = prompt("Username to DM:");
-    const usersSnap = await get(ref(db, "users"));
-    let found = null;
-    usersSnap.forEach(u => { if (u.val().username === target) found = u.key; });
-    if (!found) return alert("User not found.");
-    const chatRef = push(ref(db, "chats"));
-    await set(chatRef, { isGroup: false, members: [currentUser.uid, found], name: target });
+    const uname = prompt("Username to DM:");
+    const users = await get(ref(db, "users"));
+    let uid = null;
+    users.forEach(u => { if (u.val().username === uname) uid = u.key; });
+    if (!uid) return alert("User not found.");
+    const refNew = push(ref(db, "chats"));
+    await set(refNew, { name: uname, isGroup: false, members: [currentUser.uid, uid] });
     loadChats();
   };
+
+  // Notifications
+  if ("Notification" in window && Notification.permission !== "granted") {
+    Notification.requestPermission();
+  }
+  function showNotification(title, body) {
+    if (Notification.permission === "granted") new Notification(title, { body });
+  }
 </script>
 </body>
 </html>
