--- a/index.html
+++ b/index.html
@@ -19,187 +19,99 @@
     flex-direction: column;
   }
 
-  /* Reusable screen container */
-  .screen {
-    display: none;
-    flex-direction: column;
-    height: 100%;
-  }
+  .screen { display: none; flex-direction: column; height: 100%; }
   .screen.active { display: flex; }
 
-  /*********************
-   * AUTH SCREEN
-   *********************/
   #loginScreen {
-    justify-content: center;
-    align-items: center;
-    background: #075e54;
-    color: white;
-    text-align: center;
-    padding: 20px;
+    justify-content: center; align-items: center;
+    background: #075e54; color: white;
+    text-align: center; padding: 20px;
   }
   #loginScreen input {
-    display: block;
-    width: 80%;
-    margin: 8px auto;
-    padding: 10px;
-    border-radius: 8px;
-    border: none;
-    font-size: 1rem;
+    display: block; width: 80%; margin: 8px auto;
+    padding: 10px; border-radius: 8px; border: none; font-size: 1rem;
   }
   #loginBtn {
-    background: #25d366;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: 600;
+    background: #25d366; color: white; border: none;
+    padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: 600;
   }
 
-  /*********************
-   * CHAT LIST
-   *********************/
-  #chatListScreen {
-    background: #fff;
-    flex: 1;
-  }
+  #chatListScreen { background: #fff; flex: 1; }
   #chatListHeader {
-    background: #075e54;
-    color: white;
-    padding: 14px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 600;
+    background: #075e54; color: white; padding: 14px;
+    display: flex; justify-content: space-between; align-items: center; font-weight: 600;
   }
-  #chatList {
-    flex: 1;
-    overflow-y: auto;
-    padding-bottom: 70px;
-  }
+  #chatList { flex: 1; overflow-y: auto; padding-bottom: 70px; }
   .chatItem {
-    padding: 14px;
-    border-bottom: 1px solid #eee;
-    cursor: pointer;
+    padding: 14px; border-bottom: 1px solid #eee; cursor: pointer;
   }
   .chatItem:hover { background: #f9f9f9; }
 
   #bottomMenu {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: #075e54;
-    padding: 10px 0;
+    display: flex; justify-content: space-around; align-items: center;
+    position: fixed; bottom: 0; left: 0; width: 100%;
+    background: #075e54; padding: 10px 0;
   }
   #bottomMenu button {
-    background: #25d366;
-    border: none;
-    color: white;
-    padding: 8px 16px;
-    border-radius: 8px;
-    font-weight: 600;
-    cursor: pointer;
+    background: #25d366; border: none; color: white;
+    padding: 8px 16px; border-radius: 8px; font-weight: 600; cursor: pointer;
   }
 
-  /*********************
-   * CHAT SCREEN
-   *********************/
-  #chatScreen {
-    background: #ece5dd;
-  }
+  #chatScreen { background: #ece5dd; }
 
   #chatHeader {
-    background: #075e54;
-    color: white;
-    padding: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background: #075e54; color: white; padding: 12px;
+    display: flex; justify-content: space-between; align-items: center;
   }
   #chatHeader button {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 1rem;
-    cursor: pointer;
+    background: none; border: none; color: white;
+    font-size: 1rem; cursor: pointer;
   }
 
   #messages {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+    flex: 1; overflow-y: auto; padding: 10px;
+    display: flex; flex-direction: column;
   }
-
   .msg {
-    max-width: 80%;
-    margin-bottom: 10px;
-    padding: 8px 12px;
-    border-radius: 10px;
-    position: relative;
+    max-width: 80%; margin-bottom: 10px;
+    padding: 8px 12px; border-radius: 10px; position: relative;
     word-wrap: break-word;
   }
   .me { align-self: flex-end; background: #dcf8c6; }
   .them { align-self: flex-start; background: #fff; }
 
   .timestamp {
-    font-size: 0.75rem;
-    color: #666;
-    text-align: right;
-    margin-top: 2px;
+    font-size: 0.75rem; color: #666;
+    text-align: right; margin-top: 2px;
   }
 
   #replyBar {
-    display: none;
-    background: #f0f0f0;
-    padding: 6px 10px;
-    border-left: 4px solid #25d366;
-    font-size: 0.9rem;
+    display: none; background: #f0f0f0;
+    padding: 6px 10px; border-left: 4px solid #25d366; font-size: 0.9rem;
   }
 
   #inputBar {
-    display: flex;
-    align-items: center;
-    background: #fff;
-    padding: 8px;
-    border-top: 1px solid #ccc;
+    display: flex; align-items: center; background: #fff;
+    padding: 8px; border-top: 1px solid #ccc;
   }
   #message {
-    flex: 1;
-    padding: 10px;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    outline: none;
+    flex: 1; padding: 10px; border-radius: 20px;
+    border: 1px solid #ccc; outline: none;
   }
   #sendBtn {
-    background: #128c7e;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 42px;
-    height: 42px;
-    margin-left: 8px;
-    font-size: 1.2rem;
-    cursor: pointer;
+    background: #128c7e; color: white; border: none;
+    border-radius: 50%; width: 42px; height: 42px;
+    margin-left: 8px; font-size: 1.2rem; cursor: pointer;
   }
 
-  /* Responsive tweaks */
   @media (min-width: 700px) {
     main { max-width: 600px; margin: auto; border-radius: 10px; overflow: hidden; }
     #bottomMenu { position: static; border-top: 1px solid #ccc; }
   }
 </style>
 </head>
-
 <body>
 <main>
-  <!-- LOGIN -->
   <section id="loginScreen" class="screen active">
     <div>
       <h2>Chat Login</h2>
@@ -210,7 +122,6 @@
     </div>
   </section>
 
-  <!-- CHAT LIST -->
   <section id="chatListScreen" class="screen">
     <div id="chatListHeader">Your Chats</div>
     <div id="chatList"></div>
@@ -221,7 +132,6 @@
     </div>
   </section>
 
-  <!-- CHAT -->
   <section id="chatScreen" class="screen">
     <div id="chatHeader">
       <button id="backBtn">←</button>
@@ -241,15 +151,15 @@
   import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
   import { getDatabase, ref, set, push, get, onChildAdded } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
-  authDomain: "messagingapp-7ede5.firebaseapp.com",
-  databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
-  projectId: "messagingapp-7ede5",
-  storageBucket: "messagingapp-7ede5.firebasestorage.app",
-  messagingSenderId: "221896974865",
-  appId: "1:221896974865:web:3faca4885e48ee656907b0"
-};
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_AUTH_DOMAIN",
+    databaseURL: "YOUR_DB_URL",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_STORAGE_BUCKET",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getDatabase(app);
@@ -269,7 +179,6 @@ const firebaseConfig = {
     s.classList.add("active");
   };
 
-  // Login or Register
   document.getElementById("loginBtn").onclick = async () => {
     const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value.trim();
@@ -285,7 +194,6 @@ const firebaseConfig = {
     }
   };
 
-  // Auth listener
   onAuthStateChanged(auth, async user => {
     if (user) {
       currentUser = user;
@@ -296,7 +204,6 @@ const firebaseConfig = {
     }
   });
 
-  // Load chats
   async function loadChats() {
     chatList.innerHTML = "";
     const chats = await get(ref(db, "chats"));
@@ -332,13 +239,17 @@ const firebaseConfig = {
       <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
     messagesDiv.append(div);
     messagesDiv.scrollTop = messagesDiv.scrollHeight;
-
     div.addEventListener("touchstart", e => div.startX = e.touches[0].clientX);
     div.addEventListener("touchmove", e => {
       const diff = e.touches[0].clientX - div.startX;
       if (diff > 70) showReplyBar(m.text);
     });
     div.onclick = () => showReplyBar(m.text);
+
+    // Show notification on incoming message
+    if (m.sender !== currentUser.uid) {
+      showNotification("New message", m.text);
+    }
   }
 
   function showReplyBar(text) {
@@ -365,18 +276,26 @@ const firebaseConfig = {
     currentChatId = null;
     show(chatListScreen);
   };
-
   document.getElementById("logoutBtn").onclick = async () => {
     await signOut(auth);
     currentUser = null;
     show(loginScreen);
   };
 
+  // ✅ MULTIPLE USER GROUP CREATION
   document.getElementById("groupBtn").onclick = async () => {
     const name = prompt("Group name:");
     if (!name) return;
+    const input = prompt("Enter usernames to add (comma-separated):");
+    const usernames = input ? input.split(",").map(u => u.trim()) : [];
+    const usersSnap = await get(ref(db, "users"));
+    const memberIds = [currentUser.uid];
+    usersSnap.forEach(u => {
+      const val = u.val();
+      if (usernames.includes(val.username)) memberIds.push(u.key);
+    });
     const refNew = push(ref(db, "chats"));
-    await set(refNew, { name, isGroup: true, members: [currentUser.uid] });
+    await set(refNew, { name, isGroup: true, members: memberIds });
     loadChats();
   };
 
@@ -391,12 +310,21 @@ const firebaseConfig = {
     loadChats();
   };
 
-  // Notifications
-  if ("Notification" in window && Notification.permission !== "granted") {
-    Notification.requestPermission();
+  // ✅ MOBILE NOTIFICATION FIX (via service worker)
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js").then(() => {
+      console.log("Service worker registered.");
+      Notification.requestPermission().then(p => console.log("Permission:", p));
+    });
   }
+
   function showNotification(title, body) {
-    if (Notification.permission === "granted") new Notification(title, { body });
+    if (!("Notification" in window)) return;
+    if (Notification.permission === "granted") {
+      navigator.serviceWorker.ready.then(r =>
+        r.showNotification(title, { body, icon: "https://cdn-icons-png.flaticon.com/512/1384/1384031.png" })
+      );
+    }
   }
 </script>
 </body>
