--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Whisp Chat</title>
 <style>
-  body { font-family: system-ui, sans-serif; margin:0; background:#dcefff; display:flex; justify-content:center; }
+  body { font-family: system-ui, sans-serif; margin:0; background:#dcefff; display:flex; justify-content:center; height:100vh; }
   main { width:100%; max-width:600px; height:100vh; background:#fff; display:flex; flex-direction:column; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
   header { background:#a1cfff; color:white; padding:14px; text-align:center; font-weight:600;}
-  .screen { display:none; flex-direction:column; flex:1; }
+  .screen { display:none; flex-direction:column; flex:1; min-height:0; }
   .screen.active { display:flex; }
   input, textarea, button { font-family:inherit; font-size:1rem; }
   .auth { padding:20px; display:flex; flex-direction:column; gap:10px; }
@@ -21,9 +21,10 @@
   #chatHeader button { background:#70b7ff; color:white; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; }
   #chatTitle { font-weight:bold; text-align:center; flex:1; margin:0 10px; }
   #messages { flex:1; overflow-y:auto; padding:10px; background:#e6f2ff; display:flex; flex-direction:column; }
-  .msg { max-width:70%; padding:10px 14px; border-radius:10px; margin:6px 0; font-size:0.95rem; word-break:break-word; }
+  .msg { max-width:70%; padding:10px 14px; border-radius:10px; margin:6px 0; font-size:0.95rem; word-break:break-word; position:relative; }
   .you { align-self:flex-end; background:#cce7ff; }
   .other { align-self:flex-start; background:#fff; }
+  .timestamp { font-size:0.7rem; color:#666; position:absolute; bottom:2px; right:6px; }
   form { display:flex; padding:10px; background:#f0f0f0; }
   textarea { flex:1; padding:10px; border-radius:20px; border:none; resize:none; outline:none; }
   button.send { background:#a1cfff; color:white; border:none; border-radius:50%; width:42px; height:42px; margin-left:8px; font-size:1.2rem; cursor:pointer; }
@@ -41,6 +42,7 @@
       <input id="username" placeholder="Username (new users)">
       <button id="signup">Sign Up</button>
       <button id="login">Log In</button>
+      <button id="helpBtn">💡 Help</button>
     </div>
   </div>
 
@@ -70,7 +72,7 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebas
 import { getDatabase, ref, push, set, onChildAdded, get } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
-// 🔧 Replace with your Firebase config
+// 🔧 Your Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
   authDomain: "messagingapp-7ede5.firebaseapp.com",
@@ -80,7 +82,6 @@ const firebaseConfig = {
   messagingSenderId: "221896974865",
   appId: "1:221896974865:web:3faca4885e48ee656907b0"
 };
-
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const auth = getAuth(app);
@@ -150,13 +151,18 @@ async function openChat(chatId, chatName="Chat"){
   messagesDiv.innerHTML="";
   document.getElementById("chatTitle").textContent = chatName;
   const messagesRef = ref(db,`chats/${chatId}/messages`);
-  onChildAdded(messagesRef, (snap)=>{
+
+  // Listen for messages
+  onChildAdded(messagesRef, snap=>{
     const msg = snap.val();
     const div = document.createElement("div");
-    div.classList.add("msg", msg.sender === currentUser.uid ? "you" : "other");
-    div.innerHTML = `<strong>${msg.sender}</strong>: ${msg.text}`;
+    div.classList.add("msg", msg.sender===currentUser.uid?"you":"other");
+    div.innerHTML = `<strong>${msg.sender}</strong>: ${msg.text}<span class="timestamp">${new Date(msg.time).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})}</span>`;
     messagesDiv.appendChild(div);
     messagesDiv.scrollTop = messagesDiv.scrollHeight;
+
+    // Swipe-to-reply
+    enableSwipeToReply(div, msg);
   });
 }
 
@@ -197,29 +203,38 @@ document.getElementById("newGroup").onclick=async ()=>{
 document.getElementById("dmBtn").onclick=async ()=>{
   const targetUsername=prompt("Enter username to DM:");
   if(!targetUsername) return;
+  openDM(targetUsername);
+};
+
+// HELP BUTTON
+document.getElementById("helpBtn").onclick=()=>{
+  openDM("Whisp_Management");
+};
+
+// OPEN DM FUNCTION
+async function openDM(username){
   const usersSnap = await get(ref(db,"users"));
   let targetUser = null;
   usersSnap.forEach(u=>{
     const val = u.val();
-    if(val.username.toLowerCase() === targetUsername.toLowerCase()){
-      targetUser = { uid: u.key, username: val.username };
+    if(val.username.toLowerCase()===username.toLowerCase()){
+      targetUser={uid:u.key, username: val.username};
     }
   });
   if(!targetUser) return alert("User not found.");
-  
+
   // Check for existing chat
   const chatsSnap = await get(ref(db,"chats"));
-  let chatId = null;
+  let chatId=null;
   if(chatsSnap.exists()){
     chatsSnap.forEach(c=>{
-      const chat = c.val();
+      const chat=c.val();
       if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(targetUser.uid)){
         chatId = c.key;
       }
     });
   }
 
-  // If not found, create new DM
   if(!chatId){
     const newChatRef = push(ref(db,"chats"));
     await set(newChatRef,{
@@ -227,11 +242,46 @@ document.getElementById("dmBtn").onclick=async ()=>{
       members:[currentUser.uid, targetUser.uid],
       name:targetUser.username
     });
-    chatId = newChatRef.key;
+    chatId=newChatRef.key;
   }
 
   openChat(chatId, targetUser.username);
-};
+
+  // Auto-reply for help
+  if(username==="Whisp_Management"){
+    const messagesRef = ref(db,`chats/${chatId}/messages`);
+    onChildAdded(messagesRef, snap=>{
+      const msg=snap.val();
+      if(msg.sender!==currentUser.uid){
+        return; // ignore incoming messages
+      }
+      push(messagesRef,{
+        sender:targetUser.uid,
+        text:"Thanks for reaching out! Our team will get back to you as quickly as possible.",
+        time:Date.now()
+      });
+    });
+  }
+}
+
+// SWIPE TO REPLY
+function enableSwipeToReply(div,msg){
+  let startX,startY;
+  div.addEventListener("touchstart", e=> { startX=e.touches[0].clientX; startY=e.touches[0].clientY; });
+  div.addEventListener("touchend", e=>{
+    const endX=e.changedTouches[0].clientX;
+    const endY=e.changedTouches[0].clientY;
+    const diffX=endX-startX;
+    const diffY=endY-startY;
+    if(diffX>50 && Math.abs(diffY)<30){
+      document.getElementById("message").value=`Replying to: ${msg.text}\n`;
+      document.getElementById("message").focus();
+    }
+  });
+}
+
+// NOTIFICATIONS
+if("Notification" in window && Notification.permission!=="granted") Notification.requestPermission();
 </script>
 </body>
 </html>
