--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@ import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, si
 import { getDatabase, ref, set, push, get, onChildAdded, onValue, off, update } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
 const firebaseConfig = {
-  apiKey:"YOUR_API_KEY",
-  authDomain:"YOUR_AUTH_DOMAIN",
-  databaseURL:"YOUR_DB_URL",
-  projectId:"YOUR_PROJECT_ID",
-  storageBucket:"YOUR_STORAGE_BUCKET",
-  messagingSenderId:"YOUR_SENDER_ID",
-  appId:"YOUR_APP_ID"
+  apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
+  authDomain: "messagingapp-7ede5.firebaseapp.com",
+  databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
+  projectId: "messagingapp-7ede5",
+  storageBucket: "messagingapp-7ede5.firebasestorage.app",
+  messagingSenderId: "221896974865",
+  appId: "1:221896974865:web:3faca4885e48ee656907b0"
 };
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
